Minor updates to helper functions for UC

--- a/notebooks/uterine_contractions.ipynb
+++ b/notebooks/uterine_contractions.ipynb
@@ -10,8 +10,9 @@
    "cell_type": "code",
    "source": [
     "from database.MongoDBConnector import MongoDBConnector\n",
-    "from utils.uterine_contractions import *\n",
+    "from utils.uc import *\n",
     "\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm.auto import tqdm"
@@ -28,42 +29,16 @@
     }
    },
    "cell_type": "code",
-   "source": "mongo = MongoDBConnector(mode='remote')",
+   "source": [
+    "mongo = MongoDBConnector(mode='remote')\n",
+    "\n",
+    "onset_data = await mongo.get_all_documents(coll_name=\"model_data_onset\")\n",
+    "\n",
+    "print(len(onset_data))"
+   ],
    "id": "5809e71ffecc7b40",
    "outputs": [],
    "execution_count": 3
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-29T09:28:04.895735Z",
-     "start_time": "2025-10-29T09:27:56.801304Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "onset_data = await mongo.get_all_documents(coll_name=\"model_data_onset\")\n",
-    "print(len(onset_data))"
-   ],
-   "id": "6f8dd3f385317acc",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/zhichao/Documents/E3A/data-processing/venv/lib/python3.13/site-packages/pymongo/synchronous/collection.py:1954: UserWarning: use an explicit session with no_cursor_timeout=True otherwise the cursor may still timeout after 30 minutes, for more info see https://mongodb.com/docs/v4.4/reference/method/cursor.noCursorTimeout/#session-idle-timeout-overrides-nocursortimeout\n",
-      "  return Cursor(self, *args, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3733\n"
-     ]
-    }
-   ],
-   "execution_count": 4
   },
   {
    "metadata": {},
