Added notebook for ts2vec-lgbm

--- a/notebooks/dataset.ipynb
+++ b/notebooks/dataset.ipynb
@@ -36,7 +36,7 @@
     }
    },
    "cell_type": "code",
-   "source": "target = 'add'",
+   "source": "target = 'onset'",
    "id": "54c6556d0352a0a5",
    "outputs": [],
    "execution_count": 6
@@ -89,8 +89,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T08:28:57.550090Z",
-     "start_time": "2025-11-07T08:27:52.876927Z"
+     "end_time": "2025-11-11T07:57:20.680130Z",
+     "start_time": "2025-11-11T07:56:22.733022Z"
     }
    },
    "cell_type": "code",
@@ -109,62 +109,75 @@
    "id": "fd0baef12012fc61",
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "  0%|          | 0/4537 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "c9a91d58a30b4224bf46edbdea3cb2ae"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/4537 [00:00<?, ?it/s]/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "  0%|          | 1/4537 [00:00<55:22,  1.37it/s]/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      " 11%|█         | 504/4537 [00:06<00:36, 109.10it/s]/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
       "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
       "  med = np.nanmedian(x)\n",
-      " 13%|█▎        | 608/4537 [00:07<00:49, 78.91it/s] /Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
       "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
       "  med = np.nanmedian(x)\n",
-      " 22%|██▏       | 981/4537 [00:10<00:38, 91.71it/s] /Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
       "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
       "  med = np.nanmedian(x)\n",
-      " 80%|███████▉  | 3608/4537 [00:44<00:12, 75.12it/s] /Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
       "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
       "  med = np.nanmedian(x)\n",
-      " 91%|█████████ | 4131/4537 [00:54<00:08, 48.69it/s]/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
       "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
-      "  med = np.nanmedian(x)\n",
-      "100%|██████████| 4537/4537 [01:04<00:00, 70.84it/s]\n"
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
+      "  med = np.nanmedian(x)\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T08:29:13.264082Z",
-     "start_time": "2025-11-07T08:28:57.582230Z"
+     "end_time": "2025-11-11T07:57:42.491532Z",
+     "start_time": "2025-11-11T07:57:26.320326Z"
     }
    },
    "cell_type": "code",
@@ -180,24 +193,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4006\n"
+      "4006 Measurements\n"
      ]
     }
    ],
-   "execution_count": 4
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-07T08:29:13.280711Z",
-     "start_time": "2025-11-07T08:29:13.275866Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "b029ac239cfb9e1d",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 9
   },
   {
    "metadata": {},
