--- a/notebooks/dataset_all.ipynb
+++ b/notebooks/dataset_all.ipynb
@@ -130,8 +130,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T07:45:45.209965Z",
-     "start_time": "2025-11-11T07:45:43.093944Z"
+     "end_time": "2025-11-11T07:56:58.451105Z",
+     "start_time": "2025-11-11T07:56:56.349401Z"
     }
    },
    "cell_type": "code",
@@ -149,17 +149,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SSH tunnel started on port 62427\n"
+      "SSH tunnel started on port 65299\n"
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T07:45:46.833521Z",
-     "start_time": "2025-11-11T07:45:46.795023Z"
+     "end_time": "2025-11-11T07:57:03.076660Z",
+     "start_time": "2025-11-11T07:57:03.043729Z"
     }
    },
    "cell_type": "code",
@@ -199,26 +199,17 @@
     "    hist_metadata.append(record)"
    ],
    "id": "2875ffcb181f4409",
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'bmi_choose_weight_kg' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[12]\u001B[39m\u001B[32m, line 14\u001B[39m\n\u001B[32m     11\u001B[39m had_preterm = row[\u001B[32m8.0\u001B[39m]\n\u001B[32m     12\u001B[39m had_surgery = row[\u001B[32m13.0\u001B[39m]\n\u001B[32m---> \u001B[39m\u001B[32m14\u001B[39m bmi = \u001B[43mbmi_choose_weight_kg\u001B[49m(\n\u001B[32m     15\u001B[39m     height_cm = row[\u001B[33m'\u001B[39m\u001B[33mheight\u001B[39m\u001B[33m'\u001B[39m],\n\u001B[32m     16\u001B[39m     weight_val = row[\u001B[33m'\u001B[39m\u001B[33mold_weight\u001B[39m\u001B[33m'\u001B[39m]\n\u001B[32m     17\u001B[39m )\n\u001B[32m     19\u001B[39m record = {\n\u001B[32m     20\u001B[39m     \u001B[33m'\u001B[39m\u001B[33mmobile\u001B[39m\u001B[33m'\u001B[39m        : row[\u001B[33m'\u001B[39m\u001B[33mmobile\u001B[39m\u001B[33m'\u001B[39m],\n\u001B[32m     21\u001B[39m     \u001B[33m'\u001B[39m\u001B[33mage\u001B[39m\u001B[33m'\u001B[39m           : \u001B[38;5;28mint\u001B[39m(row[\u001B[33m'\u001B[39m\u001B[33mage\u001B[39m\u001B[33m'\u001B[39m]) \u001B[38;5;28;01mif\u001B[39;00m pd.notna(row[\u001B[33m'\u001B[39m\u001B[33mage\u001B[39m\u001B[33m'\u001B[39m]) \u001B[38;5;28;01melse\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m,\n\u001B[32m   (...)\u001B[39m\u001B[32m     30\u001B[39m     \u001B[33m'\u001B[39m\u001B[33mtype\u001B[39m\u001B[33m'\u001B[39m          : \u001B[33m'\u001B[39m\u001B[33mhist\u001B[39m\u001B[33m'\u001B[39m,\n\u001B[32m     31\u001B[39m }\n\u001B[32m     33\u001B[39m hist_metadata.append(record)\n",
-      "\u001B[31mNameError\u001B[39m: name 'bmi_choose_weight_kg' is not defined"
-     ]
-    }
-   ],
-   "execution_count": 12
+   "outputs": [],
+   "execution_count": 8
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-11T07:57:04.635773Z",
+     "start_time": "2025-11-11T07:57:04.221734Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "measurements_df = pd.DataFrame(hist_measurements)\n",
     "patients_df     = pd.DataFrame(hist_metadata)\n",
@@ -230,13 +221,18 @@
     "    how=\"inner\"\n",
     ")"
    ],
-   "id": "d58d7fe0893a120e"
+   "id": "d58d7fe0893a120e",
+   "outputs": [],
+   "execution_count": 9
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-11T07:57:08.139759Z",
+     "start_time": "2025-11-11T07:57:07.418401Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "combined_data_add = []\n",
     "\n",
@@ -275,13 +271,25 @@
     "\n",
     "print(len(combined_data_add), \"Measurements\")"
    ],
-   "id": "bbf2b0da90c4d7b6"
+   "id": "bbf2b0da90c4d7b6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21405 Measurements\n"
+     ]
+    }
+   ],
+   "execution_count": 10
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2025-11-10T07:28:04.656318Z",
-     "start_time": "2025-11-10T07:23:46.641771Z"
+     "start_time": "2025-11-11T07:57:10.032718Z"
     }
    },
    "cell_type": "code",
@@ -303,73 +311,64 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
       "  out[i] = np.nanmedian(w)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
-      "  out[i] = np.nanmedian(w)\n",
-      "  1%|          | 253/21405 [00:03<03:56, 89.61it/s]/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:15: RuntimeWarning: All-NaN slice encountered\n",
+      "  out[i] = np.nanmedian(w)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "  0%|          | 0/21405 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "39a1992ca03c4d0a93f4309b77590ac5"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
       "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
       "  med = np.nanmedian(x)\n",
-      "  2%|▏         | 379/21405 [00:04<04:21, 80.28it/s]/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
       "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
       "  med = np.nanmedian(x)\n",
-      "  2%|▏         | 437/21405 [00:05<04:22, 79.82it/s]/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
       "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
-      "  med = np.nanmedian(x)\n",
-      "  3%|▎         | 631/21405 [00:07<04:03, 85.18it/s]/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
-      "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
-      "  med = np.nanmedian(x)\n",
-      "  4%|▍         | 882/21405 [00:10<03:39, 93.61it/s]/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
-      "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
-      "  med = np.nanmedian(x)\n",
-      "  6%|▌         | 1233/21405 [00:14<03:31, 95.52it/s] /Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
-      "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
-      "  med = np.nanmedian(x)\n",
-      "  6%|▌         | 1243/21405 [00:14<03:30, 95.81it/s]/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
-      "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
-      "  med = np.nanmedian(x)\n",
-      "  9%|▉         | 1917/21405 [00:22<03:53, 83.34it/s] /Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
-      "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
-      "  med = np.nanmedian(x)\n",
-      " 19%|█▉        | 4143/21405 [00:48<02:41, 107.15it/s]/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
-      "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
-      "  med = np.nanmedian(x)\n",
-      " 53%|█████▎    | 11375/21405 [02:13<02:05, 79.98it/s] /Users/zhichao/Documents/E3A/data-processing/data-processing/utils/fhr.py:103: RuntimeWarning: All-NaN slice encountered\n",
-      "  x[~np.isfinite(x)] = np.nanmedian(x)\n",
-      "/Users/zhichao/Documents/E3A/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
-      "  med = np.nanmedian(x)\n",
-      "100%|██████████| 21405/21405 [04:15<00:00, 83.75it/s] \n"
+      "/Users/zhichao/Documents/E3A/ML/data-processing/data-processing/utils/helpers.py:50: RuntimeWarning: All-NaN slice encountered\n",
+      "  med = np.nanmedian(x)\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": null
   },
   {
    "metadata": {
